--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
         Temos também para si várias surpresas. Está interessado em saber mais?
         Deixe os seus dados e habilite-se a ganhar 40% de desconto neste conjunto </p>
       </div>
-
-
-
-
-
-
+    </div>
+    <div class="col-md-6">
+      <div class="formulario">
+        <form class="for" action="index.html" method="post">
+          <input type="text" placeholder="nome">
+          <input type="email" placeholder="email">
+          <button class="btn btn-success" type="submit">Quero o meu desconto</button>
+        </form>
+      </div>
     </div>
   </div>
     </div>
